# perspective

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PROJECT_CHARTER.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/install-deps/: action.yaml
.github/workflows/: build.yaml
.husky/: pre-push
cpp/perspective/: CMakeLists.txt  build.js  package.json
cpp/perspective/src/cpp/: base.cpp  column.cpp  data_table.cpp  emscripten_api.cpp  gnode.cpp  pool.cpp  proto_api.cpp  server.cpp  table.cpp  view.cpp  vocab.cpp
cpp/protos/: perspective.proto
docs/: book.toml  docusaurus.config.js  package.json  template.html
docs/md/: FAQ.md  SUMMARY.md
docs/md/how_to/python/: virtual_server.md
examples/: README.md
examples/blocks/: examples.js  index.mjs  package.json
examples/blocks/src/dataset/: index.html  layout.json
examples/blocks/src/duckdb/: README.md  index.html  index.js
examples/blocks/src/editable/: index.html
examples/blocks/src/market/: layouts.json  market.js
examples/blocks/src/movies/: index.html
examples/blocks/src/raycasting/: index.js
examples/blocks/src/streaming/: streaming.js
examples/blocks/src/superstore/: index.html
examples/esbuild-clickhouse-virtual/: build.js  package.json  server.mjs
examples/esbuild-clickhouse-virtual/src/: index.html  index.ts
examples/esbuild-duckdb-virtual/: build.js  package.json  server.mjs
examples/esbuild-duckdb-virtual/src/: index.html  index.ts
examples/esbuild-example/: package.json
examples/esbuild-remote/: package.json
examples/esbuild-remote/client/: index.js
examples/esbuild-remote/server/: index.mjs
examples/git-history/: package.json
examples/mta/: README.md  requirements.txt  server.py
examples/nodejs-virtual-server/: build.js  package.json  server.mjs
examples/nodejs-virtual-server/src/: index.js  worker.js
examples/promo/: package.json
examples/python-aiohttp/: package.json  server.py
examples/python-clickhouse-virtual/: package.json  server.py
examples/python-duckdb-virtual/: index.html  package.json
examples/python-polars-virtual/: server.py
examples/python-starlette/: package.json  server.py
examples/python-tornado/: package.json  server.py
examples/python-tornado-streaming/: package.json
examples/react-example/: package.json
examples/react-example/src/: index.css  index.tsx
examples/rust-axum/: Cargo.toml  package.json
examples/rust-axum/src/: main.rs
examples/vite-example/: package.json
examples/webpack-cross-origin/: package.json
examples/webpack-example/: package.json
examples/workspace/: package.json
examples/workspace-editing-python/: package.json
rust/bundle/: Cargo.toml  main.rs
rust/lint/: Cargo.toml  main.rs
rust/metadata/: Cargo.toml  build.mjs  main.rs  package.json
rust/perspective/: Cargo.toml  package.json
rust/perspective-client/: Cargo.toml  build.rs  package.json
rust/perspective-client/docs/: table.md
rust/perspective-client/src/rust/: client.rs  lib.rs  table.rs  view.rs
rust/perspective-js/: Cargo.toml  build.js  build.mjs  build.rs  docs.mjs  package.json  tsconfig.browser.json  tsconfig.json  tsconfig.virtual_servers.json
rust/perspective-js/src/rust/: client.rs  generic_sql_model.rs  lib.rs  server.rs  table.rs  table_data.rs  virtual_server.rs
rust/perspective-js/src/rust/utils/: browser.rs  console_logger.rs  errors.rs  futures.rs  json.rs
rust/perspective-js/src/ts/: browser.ts  engine.ts  perspective-server.worker.ts  perspective.browser.ts  perspective.node.ts  virtual_server.ts
rust/perspective-js/src/ts/virtual_servers/: clickhouse.ts  duckdb.ts
rust/perspective-js/src/ts/wasm/: browser.ts
rust/perspective-js/test/arrow/: untitled.json  untitled2.json  untitled3.json  untitled4.json  untitled5.json
rust/perspective-js/test/js/: duckdb.spec.js  multi_server.spec.js  remote.spec.js
rust/perspective-js/test/js/constructors/: arrow.spec.ts
rust/perspective-js/test/js/expressions/: string.spec.js
rust/perspective-python/: Cargo.toml  build.rs  docs.mjs  package.json  pyproject.toml  requirements.txt  test.mjs
rust/perspective-python/docs/client/: table.md
rust/perspective-python/perspective/: __init__.py
rust/perspective-python/perspective/core/: globalpsp.py
rust/perspective-python/perspective/handlers/: new_tornado.py
rust/perspective-python/perspective/tests/: conftest.py
rust/perspective-python/perspective/virtual_servers/: __init__.py  clickhouse.py  duckdb.py  polars.py
rust/perspective-python/perspective/widget/: widget.py
rust/perspective-python/src/: lib.rs
rust/perspective-python/src/client/: client_async.rs  client_sync.rs  python.rs  table_data.rs
rust/perspective-python/src/server/: generic_sql_model.rs  virtual_server_sync.rs
rust/perspective-server/: Cargo.toml  build.mjs  build.rs  package.json
rust/perspective-server-virtual/: Cargo.toml
rust/perspective-server-virtual/src/: lib.rs
rust/perspective-server/cmake/: protobuf.txt.in
rust/perspective-server/cmake/modules/: FindProtoc.cmake
rust/perspective-server/cpp/perspective/: CMakeLists.txt
rust/perspective-server/include/: server.h
rust/perspective-server/src/: ffi.rs  lib.rs  server.cpp
rust/perspective-viewer/: Cargo.toml  build.js  package.json  tsconfig.json
rust/perspective-viewer/.cargo/: config.toml
rust/perspective-viewer/src/less/: plugin-selector.less  (+2 more)
rust/perspective/src/: lib.rs  virtual_server.rs
tools/bench/: basic_suite.mjs  python_suite.mjs
tools/esbuild-plugin/: package.json
tools/perspective-bench/: package.json
tools/perspective-scripts/: bench.mjs  build.mjs  clean.mjs  lint_cpp.mjs  package.json  setup.mjs  sh_perspective.mjs  test_js.mjs
tools/perspective-test/: package.json  playwright.config.ts
tools/scripts/: fix.mjs  lint.mjs  package.json  prepush.mjs  workspace.mjs
tools/test/: load-viewer-csv.js  load-viewer-superstore.js  load-workspace-arrow.js  package.json  playwright.config.ts
(+199 files in other folders)
